--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>I am Ricardo Espada</title>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>I am Ricardo Espada</title>
+	
+	<style type='text/css'>
+	
+		body {
+			text-align:center;
+			font-family:'Bradley Hand ITC'; /* Setting font here instead of <font> tag but note it won't work on a lot of systems if they don't have this font installed */
+		}
+		
+		.orange {
+			color:orange;
+		}
+		
+	</style>
+	
 </head>
 
-
 <body>
-<center><h1>&nbsp;</h1>
-  <h1>&nbsp;</h1>
-  <h1>&nbsp;</h1>
-  <h1>Name: Ricardo Espada</h1>
+
+	<h1>Name: Ricardo Espada</h1>
   
-<h1><font face="Bradley Hand ITC">Web Host: A<font size="2"> Small </font></font><font color="orange" face="Bradley Hand ITC">Orange</font></h1><font face="Bradley Hand ITC">
-<h1>Code Editor(s): TextWrangeler; Notepad++; Dreamweaver</h1>
-<h1>Git: <a href="https://github.com/ricardoespada/dwa">https://github.com/ricardoespada/dwa</a></h1></font></center>
-<p>&nbsp;</p>
+	Web Host: A <small>Small</spann> <span class='orange'>Orange</span><br>
+	Code Editor(s): TextWrangeler; Notepad++; Dreamweaver<br>
+	Git: <a href="https://github.com/ricardoespada/dwa">https://github.com/ricardoespada/dwa</a><br>
+
 </body>
 </html>
